package NYT.NFileServer.NProto;

////////////////////////////////////////////////////////////////////////////////

message TReqGetFileChunk
{ }

message TRspGetFileChunk
{
    required bytes chunk_id = 1;
    repeated bytes holder_addresses = 2;
}

////////////////////////////////////////////////////////////////////////////////

message TReqSetFileChunk
{
    required bytes chunk_id = 3;
}

message TRspSetFileChunk
{ }

////////////////////////////////////////////////////////////////////////////////
